Formatting of Kant introduction 2 & 3

--- a/Critique of Pure Reason/Introduction - II.html
+++ b/Critique of Pure Reason/Introduction - II.html
@@ -3,16 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Introduction - II. The Human Intellect, Even In An Unphilosophical State, Is In Possession Of Certain Cognitions A Priori - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>II. The Human Intellect, Even In An Unphilosophical State, Is In Possession Of Certain Cognitions A Priori</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Introduction - II. The Human Intellect, Even In An Unphilosophical State, Is In Possession Of Certain Cognitions A Priori - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd Ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Introduction#a2).
+<hr>
+<h4>INTRODUCTION</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>I.—Of the Difference Between Pure and Empirical Knowledge</a></p>
+<p class='indent'><b>II.—The Human Intellect, Even in an Unphilosophical State, Is in Possession of Certain Cognitions A Priori *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - III.html'>III.—Philosophy Stands in Need of a Science Which Shall Determine the Possibility, Principles, and Extent of Human Knowlege A Priori</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - IV.html'>IV.—Of the Difference Between Analytical and Synthetical Judgments</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - V.html'>V.—In All Theoretical Sciences of Reason, Synthetical Judgments A Priori are Contained as Principles</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VI.html'>VI.—The General Problem of Pure Reason</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VII.html'>VII.—Idea and Division of a Particular Science, Under the Name of a Critique of Pure Reason</a></p>
 <br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
+<h3>Summary</h3>
+
+<p class="indent">Kant provides two methods for determining whether a proposition is a priori or not. First, all necessary propositions are a priori. Second, any empirical proposition which exhibits strict and absolute universality (that is, admits of no possible exception) is a priori.</p>
 <br>
 
 <table>
@@ -46,26 +58,25 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 
 </table>
 
-<h1>Commentary</h1>
+<h3>Commentary</h3>
 
-<h3>Summary</h3>
+<p class="indent">In section I of the introduction, Kant conflated a priority with (1) originating in the human mind and (2) being associated with human's capacity to impose a conceptual framework on sensory stimuli. As if that weren't enough, he now conflates it with (3) necessity and (4) absolute universality. He also seems to think that (3) and (4) are distinct.</p>
 
-<p>Kant provides two methods for determining whether a proposition is a priori or not. First, all necessary propositions are a priori. Second, any empirical proposition which exhibits strict and absolute universality (that is, admits of no possible exception) is a priori.</p>
+<p class="indent">Kant seems to be laboriously arriving at Descartes's notion of clearness and distinctness here. The whole first Critique might simply be Kant's way of admitting the Descartes's proposition that we have clear and distinct knowledge of the external world, but not clear and distinct knowledge of God (due the obvious inadequacies of Descartes's arguments for the existence of God).</p>
 
-<h3>Discussion</h3>
-
-<p>In section I of the introduction, Kant conflated a priority with (1) originating in the human mind and (2) being associated with human's capacity to impose a conceptual framework on sensory stimuli. As if that weren't enough, he now conflates it with (3) necessity and (4) absolute universality. He also seems to think that (3) and (4) are distinct.</p>
-
-<p>Kant seems to be laboriously arriving at Descartes's notion of clearness and distinctness here. The whole first Critique might simply be Kant's way of admitting the Descartes's proposition that we have clear and distinct knowledge of the external world, but not clear and distinct knowledge of God (due the obvious inadequacies of Descartes's arguments for the existence of God).</p>
-
-<p>One of Kant's arguments for the existence of a priori propositions might be summarized as follows:
+<p class="indent">One of Kant's arguments for the existence of a priori propositions might be summarized as follows:
+<div class="proof">
 <ol>
 <li>Certain propositions, for example basic mathematical propositions like 2 + 2 = 4, are known by us to be necessary.</li>
 <li>If sensory experience were our only source of knowledge, all propositions would be known only contingently.</li>
 <li>Therefore, sensory experience is not our only source of knowledge.</li>
 </ol>
-Premise (2) is clearly the problematic one. Kant seems to equivocate on the word "source" here. (The original line is "Denn wo wollte selbst Erfahrung ihre Gewißheit hernehmen, wenn alle Regeln, nach denen sie fortgeht, immer wieder empirisch, mithin zufällig wären;", translated as "For whence could our experience itself acquire certainty, if all the rules on which it depends were themselves empirical, and consequently fortuitous?" Kant uses a spatial metaphor, so I think the use of the word "source" as a gloss is accurate.) He correctly argues that, if all beliefs were entirely based on sense perceptions, then the concept of necessity would not arise. But humans have a brain with a memory. They can also establish (and even postulate) connections between brain states that have never been caused by sensory perceptions. Even small children can do this when they imagine a dog the size of house, for example. Once we understand the concept of 2 and the concept of addition, we grasp that 2 + 2 = 4 without the need for empirical verification. But this does not imply at all, as Kant fallaciously argues, that there is a internal "source" of knowledge. The fact that the brain can process and store information does not imply at all that it can create information about the world. It can postulate information about the world. Newton's laws were only a theory, which arose out of armchair mathematics (and previous empirical observations) and an intuitive feel for the behavior of solid objects, but that does not imply at all that Newton (or we) impose the laws on the external world. We postulated them using internal brain processing, but then we needed to verify them through external observation. We found them to be true up to a point, and then found them to be false.
-</p>
+</div>
+Premise (2) is clearly the problematic one. Kant seems to equivocate on the word "source" here. (The original line is "Denn wo wollte selbst Erfahrung ihre Gewißheit hernehmen, wenn alle Regeln, nach denen sie fortgeht, immer wieder empirisch, mithin zufällig wären;", translated as "For whence could our experience itself acquire certainty, if all the rules on which it depends were themselves empirical, and consequently fortuitous?" Kant uses a spatial metaphor, so I think the use of the word "source" as a gloss is accurate.) He correctly argues that, if all beliefs were entirely based on sense perceptions, then the concept of necessity would not arise. But humans have a brain with a memory. They can also establish (and even postulate) connections between brain states that have never been caused by sensory perceptions. Even small children can do this when they imagine a dog the size of house, for example. Once we understand the concept of 2 and the concept of addition, we grasp that 2 + 2 = 4 without the need for empirical verification. But this does not imply at all, as Kant fallaciously argues, that there is a internal "source" of knowledge, i.e. that our imaginative capacity <i>creates</i> its own imaginings. Rather, the human brain, by processing the concepts of "2" "4" and "addition," can grasp that they are defined in such a way as to guarantee the truth of "2 + 2 = 4", and to remove the need for external verification of it in each instance. But this "grasping" is not supplying any additional propositions, it is merely coming to see the connections which were already there in the propositions derived from sensory experience.</p>
 
+<hr>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - I.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Introduction - III.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
