--- a/Critique of Pure Reason/Introduction - III.html
+++ b/Critique of Pure Reason/Introduction - III.html
@@ -3,16 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Introduction - III. Philosophy Stands In Need Of A Science Which Shall Determine The Possibility, Principles, And Extent Of Human Knowledge A Priori - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>III. Philosophy Stands In Need Of A Science Which Shall Determine The Possibility, Principles, And Extent Of Human Knowledge A Priori</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Introduction - III. Philosophy Stands In Need Of A Science Which Shall Determine The Possibility, Principles, And Extent Of Human Knowledge A Priori - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd Ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Introduction#a3).
+<hr>
+<h4>INTRODUCTION</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>I.—Of the Difference Between Pure and Empirical Knowledge</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>II.—The Human Intellect, Even in an Unphilosophical State, Is in Possession of Certain Cognitions A Priori</a></p>
+<p class='indent'><b>III.—Philosophy Stands in Need of a Science Which Shall Determine the Possibility, Principles, and Extent of Human Knowlege A Priori *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - IV.html'>IV.—Of the Difference Between Analytical and Synthetical Judgments</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - V.html'>V.—In All Theoretical Sciences of Reason, Synthetical Judgments A Priori are Contained as Principles</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VI.html'>VI.—The General Problem of Pure Reason</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VII.html'>VII.—Idea and Division of a Particular Science, Under the Name of a Critique of Pure Reason</a></p>
 <br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
+<h3>Summary</h3>
+
+<p class="indent">Kant introduces the idea that a priori reasoning tends to exceed the bounds of the perceptible world. He distinguishes between mathematics, a priori reasoning that makes substantive progress and yet always refers to the perceptible world, vs. (dogmatic) metaphysics, which vainly and fruitlessly attempts to reason a priori about imperceptible things, e.g. God, freedom of the will, and the immortality of the soul.</p>
 <br>
 
 <table>
@@ -51,33 +63,29 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
         Now the safe ground of experience being thus abandoned, it seems nevertheless natural that we should hesitate to erect a building with the cognitions we possess, without knowing whence they come, and on the strength of principles, the origin of which is undiscovered. Instead of thus trying to build without a foundation, it is rather to be expected that we should long ago have put the question, how the understanding can arrive at these à priori cognitions, and what is the extent, validity, and worth which they may possess? We say, this is natural enough, meaning by the word natural, that which is consistent with a just and reasonable way of thinking; but if we understand by the term, that which usually happens, nothing indeed could be more natural and more comprehensible than that this investigation should be left long unattempted. For one part of our pure knowledge, the science of mathematics, has been long firmly established, and thus leads us to form flattering expectations with regard to others, though these may be of quite a different nature. Besides, when we get beyond the bounds of experience, we are of course safe from opposition in that quarter; and the charm of widening the range of our knowledge is so great, that unless we are brought to a stand-still by some evident contradiction, we hurry on undoubtingly in our course. This, however, may be avoided, if we are sufficiently cautious in the construction of our fictions, which are not the less fictions on that account. Mathematical science affords us a brilliant example, how far, independently of all experience, we may carry our à priori knowledge. It is true that the mathematician occupies himself with objects and cognitions only in so far as they can be represented by means of intuition. But this circumstance is easily overlooked, because the said intuition can itself be given à priori, and therefore is hardly to be distinguished from a mere pure conception. Deceived by such a proof of the power of reason, we can perceive no limits to the extension of our knowledge. The light dove cleaving in free flight the thin air, whose resistance it feels, might imagine that her movements would be far more free and rapid in airless space. Just in the same way did Plato, abandoning the world of sense because of the narrow limits it sets to the understanding, venture upon the wings of ideas beyond it, into the void space of pure intellect. He did not reflect that he made no real progress by all his efforts; for he met with no resistance which might serve him for a support, as it were, whereon to rest, and on which he might apply his powers, in order to let the intellect acquire momentum for its progress. It is, indeed, the common fate of human reason in speculation, to finish the imposing edifice of thought as rapidly as possible, and then for the first time to begin to examine whether the foundation is a solid one or no. Arrived at this point, all sorts of excuses are sought after, in order to console us for its want of stability, or rather indeed, to enable us to dispense altogether with so late and dangerous an investigation. But what frees us during the process of building from all apprehension or suspicion, and flatters us into the belief of its solidity, is this. A great part, perhaps the greatest part, of the business of our reason consists in the analysation of the conceptions which we already possess of objects. By this means we gain a multitude of cognitions, which although really nothing more than elucidations or explanations of that which (though in a confused manner) was already thought in our conceptions, are, at least in respect of their form, prized as new introspections; whilst, so far as regards their matter or content, we have really made no addition to our conceptions, but only disinvolved them. But as this process does furnish real à priori knowledge,<a href="#Footnote 1">[1]</a> which has a sure progress and useful results, reason, deceived by this, slips in, without being itself aware of it, assertions of a quite different kind; in which, to given conceptions it adds others, à priori indeed, but entirely foreign to them, without our knowing how it arrives at these, and, indeed, without such a question ever suggesting itself. I shall therefore at once proceed to examine the difference between these two modes of knowledge.
     </td>
 </tr>
-
-</table>
-
-<h3>Footnotes</h3>
-<table>
 <tr>
-<th>German text</th>
-<th>English text</th>
+    <td>
+         Footnotes
+    </td>
+    <td>
+    </td>
 </tr>
 <tr>
     <td>
-        <a id="Footnote 1">[1]</a>
     </td>
     <td> 
-        <a id="Footnote 1">[1]</a>Not synthetical.—Tr.
+        <p class="footnotes"><a id="Footnote 1">[1]</a>Not synthetical.—Tr.</p>
     </td>
 </tr>
+</table>
 
-<h1>Commentary</h1>
+<h3>Commentary</h3>
 
-<h3>Summary</h3>
+<p class="indent">This section seems to support the idea that Kant really did believe that mathematics and physics were synthetic a priori truths. We see him grappling with the idea that mathematics has given us so much knowledge, even though its entirely a priori, but why can't metaphysics? We feel him apologizing for the metaphysical claims of Leibniz and Wolff. Could philosophy have been averted from its Hegelian path if someone had simply shown Kant the fallacy of "reifying the model"? Or convinced him that mathematics is analytic? Or that a priority is a psychological property, and not a metaphysical one? Or that a priority pertains to the method of justification of a proposition, rather than its source? This section would make it seem so. Although the primary problem of Kant's Christian motivation would still be present. We must not forget that Kant's primary aim is to imbue the self with supernatural powers. The primary aim of transcendental idealism is to make the self an entity capable of making transcendental idealism true. Thus, what really see in this section is Kant's groping after a justification for transcendental idealism ex post facto. He knows that he wants to arrive at a self that is capable of imposing order on sensation, and he uses an apparent distinction between mathematics and metaphysics as a justification for that conclusion. (In reality, the only significant distinction between mathematics and metaphysics is that one is true and the other is false. Euclid's deductions are valid, whereas Wolff's are fallacious.)</p>
 
-<p>Kant introduces the idea that a priori reasoning tends to exceed the bounds of the perceptible world. He distinguishes between mathematics, a priori reasoning that makes substantive progress and yet always refers to the perceptible world, vs. (dogmatic) metaphysics, which vainly and fruitlessly attempts to reason a priori about imperceptible things, e.g. God, freedom of the will, and the immortality of the soul.</p>
-
-<h3>Discussion</h3>
-
-<p>This section seems to support the idea that Kant really did believe that mathematics and physics were synthetic a priori truths. We see him grappling with the idea that mathematics has given us so much knowledge, even though its entirely a priori, but why can't metaphysics? We feel him apologizing for the metaphysical claims of Leibniz and Wolff. Could philosophy have been averted from its Hegelian path if someone had simply shown Kant the fallacy of "reifying the model"? Or convinced him that mathematics is analytic? Or that a priority is a psychological property, and not a metaphysical one? Or that a priority pertains to the method of justification of a proposition, rather than its source? This section would make it seem so. Although the primary problem of Kant's Christian motivation would still be present. We must not forget that Kant's primary aim is to imbue the self with supernatural powers. The primary aim of transcendental idealism is to make the self an entity capable of making transcendental idealism true. Thus, what really see in this section is Kant's groping after a justification for transcendental idealism ex post facto. He knows that he wants to arrive at a self that is capable of imposing order on sensation, and he uses an apparent distinction between mathematics and metaphysics as a justification for that conclusion. (In reality, the only significant distinction between mathematics and metaphysics is that one is true and the other is false. Euclid's deductions are valid, whereas Wolff's are fallacious.)</p>
-
+<hr>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Introduction - IV.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
