Updated intro IV

--- a/Critique of Pure Reason/Introduction - IV.html
+++ b/Critique of Pure Reason/Introduction - IV.html
@@ -3,16 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kant's Critique of Pure Reason - Introduction - IV. Of The Difference Between Analytical And Synthetical Judgments - Meiklejohn's Translation - German and English Text - Bilingual Version</title>
-<link rel="stylesheet" href="style.css">
+<title>IV. Of The Difference Between Analytical And Synthetical Judgments</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-<h1>Kant's Critique of Pure Reason - Introduction - IV. Of The Difference Between Analytical And Synthetical Judgments - Meiklejohn's Translation - German and English Text - Bilingual Version</h1>
+<h1>Kant's Critique of Pure Reason (2nd Ed.) with Commentary</h1>
 
-<h3>Source</h3>
-The German text is from the 2nd edition produced in 1787 in Riga by Johann Friedrich Hartknoch, archived by Google Books (https://www.google.com/books/edition/Critik_der_reinen_Vernunft/qZEPAAAAQAAJ?hl=en), and pulled from the Zentralbegriffe der klassisch-romantischen Kunstperiode (ZBK), (http://www.zbk-online.de/texte/A0368.htm). The English text is from the John Meiklejohn translation published in London in 1855, archived by Google Books (https://www.google.com/books/edition/Critique_of_pure_reason_tr_by_J_M_D_Meik/E74IAAAAQAAJ?hl=en) and pulled from Wikisource (https://en.wikisource.org/wiki/Critique_of_Pure_Reason_(Meiklejohn)/Introduction#a4).
+<hr>
+<h4>INTRODUCTION</h4>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>I.—Of the Difference Between Pure and Empirical Knowledge</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - II.html'>II.—The Human Intellect, Even in an Unphilosophical State, Is in Possession of Certain Cognitions A Priori</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - III.html'>III.—Philosophy Stands in Need of a Science Which Shall Determine the Possibility, Principles, and Extent of Human Knowlege A Priori</a></p>
+<p class='indent'><b>IV.—Of the Difference Between Analytical and Synthetical Judgments *</b></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - V.html'>V.—In All Theoretical Sciences of Reason, Synthetical Judgments A Priori are Contained as Principles</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VI.html'>VI.—The General Problem of Pure Reason</a></p>
+<p class='indent'><a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - VII.html'>VII.—Idea and Division of a Particular Science, Under the Name of a Critique of Pure Reason</a></p>
 <br>
+(Click <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Table of Contents.html'>here</a> to return to the table of contents.)
+<hr>
+<h3>Summary</h3>
+
+<p class="indent">Kant introduces the distinction between analytic propositions and synthetic propositions. Analytic propositions are those in which subject of the sentence "contains" the predicate. Commentators have often understood this to mean that the propositions are true by definition. Kant gives the example of the proposition "All bodies are extended" (i.e. take up 3-dimensional space), as an analytic proposition, since the concept of "body" already contains the idea that the object takes up space. Synthetic propositions, on the other hand, extend the proposition beyond the concept that is the subject of the sentence, and thus have to be verified through experience. Kant gives the example "All bodies are heavy" as a synthetic proposition. This seems a bit controversial, though, since one might think that the concept of body also contains the concept of mass. A much less controversial example would be something like "All bodies are smaller than the size of the universe."</p>
 <br>
 
 <table>
@@ -51,18 +63,15 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
         But to synthetical judgments à priori, such aid is entirely wanting. If I go out of and beyond the conception A, in order to recognize another B as connected with it, what foundation have I to rest on, whereby to render the synthesis possible? I have here no longer the advantage of looking out in the sphere of experience for what I want. Let us take, for example, the proposition, “everything that happens has a cause.” In the conception of something that happens, I indeed think an existence which a certain time antecedes, and from this I can derive analytical judgments. But the conception of a cause lies quite out of the above conception, and indicates something entirely different from “that which happens,” and is consequently not contained in that conception. How then am I able to assert concerning the general conception—“that which happens”—something entirely different from that conception, and to recognize the conception of cause although not contained in it, yet as belonging to it, and even necessarily? what is here the unknown = X, upon which the understanding rests when it believes it has found, out of the conception A a foreign predicate B, which it nevertheless considers to be connected with it? It cannot be experience, because the principle adduced annexes the two representations, cause and effect, to the representation existence, not only with universality, which experience cannot give, but also with the expression of necessity, therefore completely à priori and from pure conceptions. Upon such synthetical, that is augmentative propositions, depends the whole aim of our speculative knowledge à priori; for although analytical judgments are indeed highly important and necessary, they are so, only to arrive at that clearness of conceptions which is requisite for a sure and extended synthesis, and this alone is a real acquisition.
     </td>
 </tr>
-
-</table>
-
-<h3>Footnotes</h3>
-<table>
 <tr>
-<th>German text</th>
-<th>English text</th>
+    <td>
+         Footnotes
+    </td>
+    <td>
+    </td>
 </tr>
 <tr>
     <td>
-        <a id="Footnote 1">[1]</a>
     </td>
     <td> 
         <a id="Footnote 1">[1]</a>That is, judgments which really add to, and do not merely analyse or explain the conceptions which make up the sum of our knowledge.—Tr.
@@ -70,16 +79,15 @@ The German text is from the 2nd edition produced in 1787 in Riga by Johann Fried
 </tr>
 </table>
 
-<h1>Commentary</h1>
+<h3>Commentary</h3>
 
-<h3>Summary</h3>
+<p class="indent">Here we again see the need to decide, before attempting a philosophical treatise, whether we will allow nonphysical objects into our ontology. Kant has not said that he will, and we might see compelling reasons, from everything he has said thus far about the negative aspect of the critique, to be suspicious about asserting the existence of nonphysical entities. But even right at the start of this passage, when he appears to be making an innocuous distincition, Kant begins by making seemingly metaphysical claims about abstract objects, namely "judgments." In certain judgments, he says, the predicate belongs to the subject. This makes it seem like this "belongs to" relation plays some sort of metaphysical role that carves out an essential distinction between two types of abstract objects, analytic propositions and synthetic propositions. But if we do not admit of nonphysical objects, we see rather that we skip over several layers of metaphor here, and take the symbol for reality. Judgments are just brain states. So any kind of distinction between types of judgments can only be a physical distinction. The "subject" and "object" of a brain state are...just more brain states. So it is merely a metaphor to say that the object is contained within a subject. This confusion of treating concepts as real entities and as postulating real relations between them is at the root of all that is wrong with contemporary Analytic philosophy.</p>
 
-<p>Kant introduces the distinction between analytic propositions and synthetic propositions. Analytic propositions are those in which subject of the sentence "contains" the predicate. Commentators have often understood this to mean that the propositions are true by definition. Kant gives the example of the proposition "All bodies are extended" (i.e. take up 3-dimensional space), as an analytic proposition, since the concept of "body" already contains the idea that the object takes up space. Synthetic propositions, on the other hand, extend the proposition beyond the concept that is the subject of the sentence, and thus have to be verified through experience. Kant gives the example "All bodies are heavy" as a synthetic proposition. This seems a bit controversial, though, since one might think that the concept of body also contains the concept of mass. A much less controversial example would be something like "All bodies are smaller than the size of the universe."</p>
+<p class="indent">It is also false to say that when we think a subject of a analytic claim, we also already think the predicate. With two different brain states, one cannot "contain" the other. Thus even "unmarried male" and "bachelor" do not convey exactly the same meaning. There is nothing of philosophical importance about this, and it is not worth a fraction of the ink that has been spilled over it. Rather, the brain states are simply different.</p>
 
-<h3>Discussion</h3>
-
-<p>Here we again see the need to decide, before attempting a philosophical treatise, whether we will allow nonphysical objects into our ontology. Kant has not said that he will, and we might see compelling reasons, from everything he has said thus far about the negative aspect of the critique, to be suspicious about asserting the existence of nonphysical entities. But even right at the start of this passage, when he appears to be making an innocuous distincition, Kant begins by making seemingly metaphysical claims about abstract objects, namely "judgments." In certain judgments, he says, the predicate belongs to the subject. This makes it seem like this "belongs to" relation plays some sort of metaphysical role that carves out an essential distinction between two types of abstract objects, analytic propositions and synthetic propositions. But if we do not admit of nonphysical objects, we see rather that we skip over several layers of metaphor here, and take the symbol for reality. Judgments are just brain states. So any kind of distinction between types of judgments can only be a physical distinction. The "subject" and "object" of a brain state are...just more brain states. So it is merely a metaphor to say that the object is contained within a subject. This confusion of treating concepts as real entities and as postulating real relations between them is at the root of all that is wrong with contemporary Analytic philosophy.</p>
-
-<p>It is also false to say that when we think a subject of a analytic claim, we also already think the predicate. With two different brain states, one cannot "contain" the other. Thus even "unmarried male" and "bachelor" do not convey exactly the same meaning. There is nothing of philosophical importance about this, and it is not worth a fraction of the ink that has been spilled over it. Rather, the brain states are simply different.</p>
+<hr>
+<p style="text-align:left;">&larr; <a href='https://ericlyonshansen.github.io/Critique of Pure Reason/Introduction - III.html'>Previous section</a> <span style="float:right;">&rarr; <a href='https://ericlyonshansen.github.io/Introduction - V.html'>Next section</a></span></p>
+<br>
+Go <a href='https://ericlyonshansen.github.io'>back</a> to the main page.
 </body>
 </html>
